--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,8 @@ qualquer coisa aqui
 
 O palmeiras não tem mundial.
 PC > Console
+
+
+Rindos Hélios - he he he he,...
+Frase Filosófica aqui.
+Canibais vegetarianos comem plantas carnívoras.
