new config and html

--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,6 @@ PC > Console
 Rindos Hélios - he he he he,...
 Frase Filosófica aqui.
 Canibais vegetarianos comem plantas carnívoras.
+
+qualquer coisa aqui anything
+
